--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -1,6 +1,6 @@
 
 We present the PDFs of the inputs of the dynamical simulation and the
-output PDFs of the outputs after applying the polarization prior in
+marginalized PDFs of the outputs after applying the polarization prior in
 addition to the default priors.
 %make use of subplots from matplotlib in order to plot all the posteriors
 \label{app: results}
